--- a/sass/elements/game/_general.scss
+++ b/sass/elements/game/_general.scss
@@ -113,6 +113,11 @@
             height: 41px;
             border: 4px solid $color-gold;
         }
+        @include ipadPro {
+            width: 93%;
+            height: 63px;
+            border: 7px solid  $color-gold;
+        }
     }
     &__progressBar{
       position: absolute;
@@ -135,6 +140,9 @@
        }
        @include laptopM {
            font-size: 28px;
+       }
+       @include ipadPro {
+           font-size: 41px;
        }
     }
     &__cancelBtn{
