--- a/sass/elements/game/_wizard.scss
+++ b/sass/elements/game/_wizard.scss
@@ -7,7 +7,10 @@
     display: grid;
     grid-template-rows: repeat(2, 1fr);
     grid-template-columns: repeat(3, 1fr);
-
+     @include ipadPro {
+        grid-template-rows: repeat(5, 1fr);
+        grid-template-columns: repeat(2, 1fr);
+     }
     &__characterWrapper {
         grid-column: 1/1;
         grid-row: 1/1;
@@ -15,11 +18,18 @@
         display: flex;
         justify-content: center;
         align-items: flex-end;
+        @include ipadPro {          
+             grid-column: 1/1;
+             grid-row: 1/3;
+        }
     }
     &__characterImg {
         width: 100%;
         height: auto;
         object-fit: cover;
+        @include ipadPro {
+            
+        }
         
     }
     &__descriptionWrapper {
@@ -36,6 +46,11 @@
         }
         @include laptopL {
             padding: 6px;
+        }
+        @include ipadPro {
+            grid-column: 2/2;
+            grid-row: 1/3;
+            max-height: none;
         }
     }
     &__description {
@@ -65,6 +80,10 @@
             height: 209px;
             border-radius: 10px;
         }
+        @include ipadPro {
+            height: 100%;
+            border-radius: 20px;
+        }
     }
     &__title {
         font-size: 37px;
@@ -83,11 +102,18 @@
         @include laptopS {
             font-size: 24px;
         }
+        @include ipadPro{
+        font-size: 44px;
+        }
     }
     &__text {
         font-size: 1.25rem;
         word-spacing: 0.125rem;
         line-height: 1.25rem;
+        @include ipadPro {
+            font-size:  1.9rem;
+            line-height: 1.7rem;
+        }
     }
     &__actionBar {
         width: 100%;
@@ -124,6 +150,9 @@
             cursor: pointer;
             letter-spacing: 0.065rem;
         }
+        @include ipadPro {
+            font-size: 1.875rem;
+        }
     }
     &__countdownWrapper {
         position: absolute;
@@ -136,6 +165,9 @@
             letter-spacing: 0.063rem;
             word-spacing: 0.125rem;
             text-shadow: 0.063rem 0 #e85df5;
+            @include ipadPro {
+                font-size: 1.85rem;
+            }
         }
     }
     &__countdown {
@@ -143,6 +175,9 @@
         font-size: 1.875rem;
         font-weight: 700;
         word-spacing: 0.125rem;
+        @include ipadPro {
+            font-size: 2.875rem;
+        }
     }
 }
 .spinningWheel {
@@ -152,6 +187,10 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        @include ipadPro {
+            grid-column: 1/-1;
+            grid-row: 3/-1;
+        }
     }
     &__itemImg {
         width: 141px;
@@ -165,6 +204,10 @@
         @include laptopM {
             width: 101px;
             margin-bottom: 123px;
+        }
+        @include ipadPro {
+            width: 140px;
+            margin-bottom: 136px;
         }
     }
 }
@@ -188,6 +231,11 @@
         width: 510px;
         height: 510px;
         border: 8px solid #ffd26a;
+    }
+    @include ipadPro {
+        width: 760px;
+        height: 760px;
+        border: 10px solid #ffd26a;
     }
     &-animation {
         animation: 10s an__spinning_wheel_rotate infinite;
@@ -214,6 +262,10 @@
         @include laptopM {
             width: 207px;
             left: 143px;
+        }
+        @include ipadPro {
+            width: 308px;
+            left: 217px;
         }
     }
 
@@ -283,6 +335,10 @@
         @include laptopM {
             width: 204px;
             border: 3px solid $color-gold;
+        }
+        @include ipadPro {
+            width: 314px;
+            border: 5px solid $color-gold;
         }
     }
     &__img {
