--- a/sass/elements/game/_pets.scss
+++ b/sass/elements/game/_pets.scss
@@ -3,6 +3,7 @@
 
     height: 100%;
     background-size: 100% 100%;
+    overflow: auto;
     &__wrapper {
         display: flex;
         align-items: center;
@@ -16,6 +17,13 @@
         }
         @include laptopS {
             height: calc(100% - 48px);
+        }
+        @include ipadPro {
+            height: calc(100% - 74px);
+            justify-content: center;
+            flex-wrap: wrap;
+            align-content: flex-start;
+            padding-top: 23px;
         }
     }
     &__userGoldWrapper {
@@ -37,6 +45,9 @@
         }
         @include laptopS {
             border-radius:  10px;
+        }
+        @include ipadPro {
+            border-radius: 20px;
         }
     }
     &__userGoldAmount {
@@ -96,6 +107,15 @@
             border-radius: 10px;
             height: 329px;
         }
+        @include ipadPro {
+            height: 566px;
+            width: 45%;
+            border-radius: 20px;
+            margin: 0 17px ;
+            &:nth-child(3), &:nth-child(4){
+                margin-top: 36px;
+            }
+        }
     }
     &__current {
         border: 8px solid $color-gold;
@@ -107,6 +127,9 @@
         }
         @include laptopS {
             border: 4px solid $color-gold;
+        }
+        @include ipadPro {
+            border: 10px solid $color-gold;
         }
     }
     &__countdownWrapper {
@@ -141,6 +164,12 @@
             padding: 2px 0;
             bottom: -20px;
         }
+        @include ipadPro {
+            font-size: 32px;
+            border-radius: 0 0 20px 20px;
+            padding: 2px 0;
+            bottom: -36px;
+        }
     }
     &__img {
         width: 100%;
@@ -150,6 +179,9 @@
             display: block;
             width: 90%;
             margin: 0 auto;
+        }
+        @include ipadPro {
+            width: 64%;
         }
     }
 
@@ -233,6 +265,9 @@
         word-spacing: 0.125rem;
         -webkit-text-stroke: 0.063rem $color-gray-dark;
         margin-top: 0.188rem;
+        @include ipadPro {
+            font-size: 17px;
+        }
     }
     &__buy {
         width: 100%;
