--- a/sass/elements/game/_fight.scss
+++ b/sass/elements/game/_fight.scss
@@ -42,6 +42,10 @@
             width: 203px;
             border-radius: 10px;
         }
+        @include ipadPro {
+            width: 288px;
+            border-radius: 20px;
+        }
     }
     &__characterImg {
         width: 100%;
@@ -68,6 +72,10 @@
         @include laptopM {
             height: 33px;
             border: 3px solid $color-gray_dark;
+        }
+        @include ipadPro {
+            height: 40px;
+            border: 4px solid  $color-gray_dark;
         }
     }
     &__healthPoints {
@@ -98,6 +106,9 @@
             border-color: inherit;
             font-weight: bold;
             font-size: 1.438rem;
+            @include ipadPro {
+                font-size: 1.338rem;
+            }
         }
         tr {
             display: table-row;
@@ -194,6 +205,12 @@
         @include laptopS {
             border-radius: 10px;
         }
+        @include ipadPro {
+            width: 376px;
+            border: 10px solid $color-gold;
+            border-radius: 20px;
+            padding: 10px;
+        }
     }
     &__summaryTitle {
         font-size: 1.125rem;
@@ -202,6 +219,9 @@
         word-spacing: 0.125rem;
         color: $color-white;
         text-align: center;
+        @include ipadPro {
+            font-size: 1.55rem;
+        }
     }
     &__summaryPayout {
         margin: 10px 0;
@@ -281,6 +301,9 @@
         @include laptopS {
             animation: 0.8s an__monster_attack-laptopS forwards;
         }
+        @include ipadPro {
+            animation: 0.8s an__monster_attack-ipadPro forwards;
+        }
     }
     &__explosionWrapper {
         display: flex;
@@ -334,12 +357,18 @@
         @include laptopM {
             animation: 1.5s an__sword_attack-laptopM forwards;
         }
+        @include ipadPro {
+            animation: 1.5s an__sword_attack-ipadPro forwards;
+        }
     }
     @include laptopS {
         top: 70px;
         width: 155px;
         height: 175px;
         left: 100px;
+    }
+    @include ipadPro {
+        top: 130px;
     }
 }
 // monster attack
@@ -383,6 +412,11 @@
         transform: translateX(-330px);
     }
 }
+@keyframes an__monster_attack-ipadPro{
+    100% {
+        transform: translateX(-370px);
+    }
+}
 
 // user attack
 @keyframes an__sword_attack {
@@ -424,6 +458,15 @@
     }
     100% {
         transform: translate(540px, 0%) scale(100%);
+    }
+}
+
+@keyframes an__sword_attack-ipadPro {
+    30% {
+        transform: scale(50%);
+    }
+    100% {
+        transform: translate(590px, 0%) scale(100%);
     }
 }
 
