--- a/sass/elements/game/_profile.scss
+++ b/sass/elements/game/_profile.scss
@@ -18,6 +18,9 @@
             @include laptopL {
                 border-right: 4px solid $color-gray_dark;
             }
+            @include ipadPro {
+                border-right: 10px solid $color-gray_dark;
+            }
         }
         @include laptopL {
             padding: 6px;
@@ -168,6 +171,9 @@
             height: 19px;
             width: 22px;
         }
+        @include ipadPro {
+            width: 32px;
+        }
     }
     &__portraitActionIcon {
         width: 27px;
@@ -205,6 +211,11 @@
             width: 208px;
             padding: 6px;
         }
+        @include ipadPro {
+            width: 301px;
+            border-radius: 20px;
+            padding: 10px;
+        }
         &-common {
             border: 4px solid $color-blue;
             @include laptopL {
@@ -212,6 +223,9 @@
             }
             @include laptopS {
                 border: 2px solid $color-blue;
+            }
+            @include ipadPro {
+                border: 4px solid $color-blue;
             }
         }
         &-legendary {
@@ -221,6 +235,9 @@
             }
             @include laptopS {
                 border: 2px solid $color-gold;
+            }
+            @include ipadPro {
+                border: 4px solid $color-gold;
             }
         }
         &::after {
@@ -263,6 +280,9 @@
             @include laptopS {
                 left: 100px;
             }
+            @include ipadPro {
+                left: 122px;
+            }
         }
         &-weapon {
             top: 0;
@@ -287,6 +307,9 @@
             @include laptopS {
                 right: 100px;
             }
+            @include ipadPro {
+                right: 122px;
+            }
         }
 
         &-chestPlate {
@@ -302,6 +325,7 @@
                 @include laptopS {
                     left: -17px;
                 }
+                
             }
             @include desktopM {
                 left: 160px;
@@ -311,6 +335,9 @@
             }
             @include laptopS {
                 left: 100px;
+            }
+            @include ipadPro {
+                left: 122px;
             }
         }
 
@@ -340,6 +367,9 @@
             @include laptopS {
                 right: 100px;
             }
+            @include ipadPro {
+                right: 122px;
+            }
         }
 
         &-gloves {
@@ -364,6 +394,9 @@
             }
             @include laptopS {
                 left: 100px;
+            }
+            @include ipadPro {
+                left: 122px;
             }
         }
 
@@ -390,6 +423,9 @@
             @include laptopS {
                 right: 100px;
             }
+            @include ipadPro {
+                right: 122px;
+            }
         }
         .itemTitle {
             color: $color-white;
@@ -397,6 +433,10 @@
         .itemRarity {
             color: $color-white;
             border-top: 2px solid $color-gold;
+            @include ipadPro {
+                margin-top: 7px;
+                font-size: 18px;
+            }
         }
         .itemDsc {
             color: $color-white;
@@ -447,6 +487,11 @@
         @include laptopS {
             height: 20px;
             margin-bottom: 1px;
+        }
+        @include ipadPro {
+            margin-top: 12px;
+            height: 28px;
+            margin-bottom: 3px;
         }
     }
     &__equipmentItemSellWrapper {
@@ -931,6 +976,9 @@
         @include laptopL {
             padding-top: 3px;
         }
+        @include ipadPro {
+            padding-top: 10px;
+        }
     }
     tr {
         max-height: 30px;
@@ -1027,6 +1075,11 @@
             font-size: 15px;
             padding: 1px 6px;
             border-radius: 6px;
+        }
+        @include ipadPro {
+            font-size: 22px;
+            padding: 3px 10px;
+            border-radius: 8px;
         }
     }
 }
@@ -1179,6 +1232,7 @@
         letter-spacing: 0.125rem;
     }
 }
+
 
 @keyframes an__profile__item-notAfford {
     100% {
