--- a/sass/elements/game/_profile.scss
+++ b/sass/elements/game/_profile.scss
@@ -517,6 +517,10 @@
         @include laptopS {
             height: 20px;
         }
+        @include ipadPro {
+            height: 28px;
+            margin-bottom: 3px;
+        }
     }
 
     &__actionName {
@@ -732,6 +736,10 @@
         img {
             width: 90%;
             height: 90%;
+            @include ipadPro{
+                width: 86%;
+                height: 86%;
+            }
         }
         &:hover {
             cursor: pointer;
@@ -778,6 +786,10 @@
         &-blacksmith {
             top: 0;
             background-color: red;
+            height: 1px;
+            @include ipadPro {
+                top: 186px;
+            }
         }
     }
     &__general {
