--- a/sass/elements/game/_navMenu.scss
+++ b/sass/elements/game/_navMenu.scss
@@ -5,14 +5,15 @@
     font-size: 2.5rem;
     overflow: auto;
     @include ipadPro {
+        width: 50%;
         z-index: 3;
         position: absolute;
         display: none;
     }
-    ::-webkit-scrollbar{
+    ::-webkit-scrollbar {
         width: 0;
     }
-    &__titleWrapper{
+    &__titleWrapper {
         margin-top: 10px;
         height: 90px;
         font-weight: bold;
@@ -21,7 +22,7 @@
         text-align: center;
         letter-spacing: 0.313rem;
         color: $color-red;
-        @include desktopM{
+        @include desktopM {
             height: 75px;
             font-size: 39px;
         }
@@ -53,16 +54,20 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        @include desktopM{
-           margin-top: 6px;
-           height: 50px;
+        @include desktopM {
+            margin-top: 6px;
+            height: 50px;
         }
         @include laptopL {
             margin-top: 5px;
             height: 42px;
         }
+        @include ipadPro {
+            padding: 0 10px;
+            margin-top: 10px;
+            height: 61px;
+        }
     }
-  
 
     &__icon {
         width: 61px;
@@ -78,14 +83,17 @@
             height: 100%;
             object-fit: cover;
         }
-        @include desktopM{
-           width: 56px;
-         }
-         @include laptopL {
-             width: 42px;
-         }
+        @include desktopM {
+            width: 56px;
+        }
+        @include laptopL {
+            width: 42px;
+        }
+        @include ipadPro {
+            width: 61px;
+        }
     }
-    &__link{
+    &__link {
         position: relative;
         z-index: 0;
         margin-left: -15px;
@@ -97,14 +105,19 @@
         font-size: 1.438rem;
         overflow: hidden;
         color: $color-gray_dark;
-        @include desktopM{
+        @include desktopM {
             padding: 5px;
             padding-left: 20px;
-          }
-          @include laptopL {
-              padding: 4px;
-              padding-left: 21px;
-          }
+        }
+        @include laptopL {
+            padding: 4px;
+            padding-left: 21px;
+        }
+        @include ipadPro {
+            padding: 6px;
+            padding-left: 21px;
+            font-weight: bold;
+        }
         &::after {
             content: "";
             display: block;
@@ -116,8 +129,11 @@
             right: -100%;
             transform: rotate(21deg);
             transition: 0.4s;
-            @include desktopM{
+            @include desktopM {
                 width: 55px;
+            }
+            @include ipadPro {
+                width: 157px;
             }
         }
         &:hover::after {
@@ -131,11 +147,11 @@
             padding-right: 22px;
             text-align: right;
             text-decoration: underline;
-            &::after{
+            &::after {
                 left: -100%;
-                 background: #e04f5f;
+                background: #e04f5f;
             }
-             &:hover{
+            &:hover {
                 cursor: pointer;
             }
             &:hover::after {
@@ -185,19 +201,16 @@
         &-guard {
             &::after {
                 background: #ff9e22;
-                
             }
         }
         &-account {
             &::after {
                 background: #8f95e6;
-                
             }
         }
     }
 }
-.mobileNav{
-    
+.mobileNav {
     width: 100%;
     height: 70px;
     background: $color-gray_dark;
@@ -206,10 +219,10 @@
     display: none;
     padding: 7px 16px;
     z-index: 4;
-    h1{
-       margin-left: 11px;
+    h1 {
+        margin-left: 11px;
     }
-    &__icon{
+    &__icon {
         height: 100%;
         width: auto;
         object-fit: cover;
@@ -217,14 +230,13 @@
     @include ipadPro {
         display: flex;
     }
-    &__content{
+    &__content {
         width: 100%;
         height: 100px;
         background-color: red;
     }
-    &__item{
+    &__item {
         height: 100%;
         width: 45%;
-        
     }
 }
