--- a/sass/elements/game/_general.scss
+++ b/sass/elements/game/_general.scss
@@ -29,10 +29,14 @@
         max-height: 768px;
     }
     @include ipadPro {
+        min-height: 1270px;
         width: 100%;
         height: 100vh;
         max-height: none;
         position: relative;
+    }
+    @include tablet {
+        min-height: 1024px;
     }
 }
 .game__contentContainer{
