--- a/sass/elements/game/_inbox.scss
+++ b/sass/elements/game/_inbox.scss
@@ -4,15 +4,28 @@
     background-image: url("/images/background_inbox.jpg");
     background-size: 100% 100%;
 
+    @include tablet {
+        background-size: 170% 100%;
+    }
     &__item {
         width: 50%;
         height: 100%;
         &:first-child {
-            border-right: 6px solid #343a40;
+            border-right: 6px solid $color-gray-dark;
             @include desktopS {
-                border-right: 4px solid #343a40;
+                border-right: 4px solid $color-gray-dark;
             }
+            @include ipadPro {
+                border-right: 10px solid $color-gray-dark;
+            }
+           @include tablet {
+                border-right: none;
+           }
         }
+         @include tablet {
+                width: 100%;
+               
+            }
     }
     &__header {
         height: 50px;
@@ -23,13 +36,15 @@
         @include desktopS {
             height: 42px;
             border-bottom: 4px solid $color-gold;
-            
         }
         @include laptopM {
             height: 34px;
         }
         @include ipadPro {
             height: 53px;
+        }
+        @include tablet {
+            border-bottom: 6px solid $color-gold;
         }
     }
     &__mailIcon {
@@ -47,7 +62,7 @@
         margin-top: 10px;
         overflow: auto;
         height: calc(100% - 50px);
-        &::-webkit-scrollbar{
+        &::-webkit-scrollbar {
             width: 0;
         }
         @include desktopS {
@@ -105,6 +120,10 @@
                 border-left: 4px solid $color-blue;
                 border-bottom: 4px solid $color-blue;
             }
+            @include tablet {
+                border-left: 6px solid $color-blue;
+                border-bottom: 6px solid $color-blue;
+            }
         }
         &::before {
             top: 0;
@@ -115,6 +134,10 @@
                 border-right: 4px solid $color-blue;
                 border-top: 4px solid $color-blue;
             }
+            @include tablet {
+                border-right: 6px solid $color-blue;
+                border-top: 6px solid $color-blue;
+            }
         }
         &:hover::after,
         &:hover::before {
@@ -123,7 +146,7 @@
         }
 
         @include desktopS {
-            padding: 0 10px ;
+            padding: 0 10px;
             height: 50px;
         }
         @include laptopM {
@@ -133,6 +156,10 @@
         @include ipadPro {
             padding: 0px 8px;
             height: 54px;
+        }
+        @include tablet {
+            padding: 1px 13px;
+            height: 63px;
         }
     }
 
@@ -177,6 +204,19 @@
         font-size: 1.25rem;
         border-left: 4px solid $color-gray-dark;
         overflow: hidden;
+    }
+    &__closeMail{
+        position: absolute;
+        width: 47px;
+        height: 47px;
+        z-index: 2;
+        top: 7px;
+        right: 7px;
+        img{
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
     }
 }
 //#3a86ff
@@ -331,4 +371,5 @@
             font-style: italic;
         }
     }
+    
 }
