--- a/sass/settings/_media.scss
+++ b/sass/settings/_media.scss
@@ -36,12 +36,15 @@ $desktopM: 1919px;
   }
 }
 @mixin ipadPro {
-  @media (max-width: $laptopS) and (min-height: 800px), (max-width: $tablet){
+  @media (max-width: $laptopS) and (min-height: 1000px) {
+    @content;
+  }
+  @media  (max-width: 1023px) and (min-height: 1px){
     @content;
   }
 }
 @mixin tablet {
-    @media (max-width: $tablet) {
+    @media (max-width: 1023px) {
       @content;
     }
 }
