--- a/sass/elements/game/_navMenu.scss
+++ b/sass/elements/game/_navMenu.scss
@@ -42,6 +42,16 @@
                 display: none;
             }
         }
+        @include tablet {
+            height: 70px;
+            font-size: 40px;
+            &:first-child {
+                display: block;
+            }
+            &:nth-child(2){
+                display: none;
+            }
+        }
     }
     &__list {
         margin-top: 10px;
@@ -231,12 +241,44 @@
         display: flex;
     }
     &__content {
+        display: flex;
         width: 100%;
-        height: 100px;
-        background-color: red;
+        height: 56px;
+        margin-left: 15px;
+      
     }
     &__item {
+        display: flex;
+        align-items: center;
         height: 100%;
         width: 45%;
+        &:last-child {
+            margin-left: 20px;
+        }
+    }
+    &__itemIcon {
+        z-index: 1;
+        height: 100%;
+        background-color: $color-white;
+        padding: 2px;
+        border-radius: 30px;
+        img{
+            height: 100%;
+            width: auto;
+            object-fit: cover;
+        }
+    }
+    &__itemName{
+        margin-left: -12px;
+        
+        z-index: 0;
+        width: 100%;
+        background-color: $color-white;
+        font-size: 26px;
+        padding: 8px;
+        font-weight: bold;
+        letter-spacing: 0.125rem;
+        border-radius: 0 20px 20px 0;
+        padding-left: 14px;
     }
 }
