--- a/sass/elements/game/_blacksmith.scss
+++ b/sass/elements/game/_blacksmith.scss
@@ -30,9 +30,7 @@
             @include laptopL {
                 border-right: 4px solid $color-gray_dark;
             }
-            @include ipadPro {
-                display: flex;
-            }
+            
         }
         &:last-child {
             @include ipadPro {
@@ -56,7 +54,9 @@
             padding: 6px;
         }
         @include ipadPro {
-            width: 100%;
+            width: 768px;
+            
+            
         }
     }
     &__frame{
@@ -66,11 +66,17 @@
       @include ipadPro {
           width: 50%;
       }
+      @include tablet {
+          width: 100%;
+      }
   }
   .profile__backpack{
     @include ipadPro {
         width: 50%;
         justify-content: flex-start;
+    }
+    @include tablet {
+        width: 100%;
     }
   }
   &__mobileTable{
