--- a/sass/elements/game/_profile.scss
+++ b/sass/elements/game/_profile.scss
@@ -21,9 +21,15 @@
             @include ipadPro {
                 border-right: 10px solid $color-gray_dark;
             }
+            @include tablet {
+                border-right: none;
+            }
         }
         @include laptopL {
             padding: 6px;
+        }
+        @include tablet {
+            width: 100%;
         }
     }
     &__equipment {
@@ -154,7 +160,6 @@
         @include laptopL {
             height: 21px;
         }
-       
     }
     &__portraitBtn {
         height: 29px;
@@ -180,6 +185,11 @@
         @include ipadPro {
             width: 32px;
         }
+        @include tablet {
+            height: 33px;
+            width: 47px;
+            transform: translateY(-14px);
+        }
     }
     &__portraitActionIcon {
         width: 27px;
@@ -189,6 +199,11 @@
         @include laptopS {
             width: 21px;
             margin: 2px 5px;
+        }
+        @include tablet {
+            width: auto;
+            height: 33px;
+            margin: -14px 5px;
         }
     }
 
@@ -337,7 +352,6 @@
                 @include laptopS {
                     left: -17px;
                 }
-                
             }
             @include desktopM {
                 left: 160px;
@@ -700,6 +714,11 @@
                 width: 38px;
                 left: -22px;
             }
+            @include ipadPro {
+                height: 54px;
+                width: 54px;
+                left: -30px;
+            }
         }
         &::after {
             content: "";
@@ -717,6 +736,11 @@
                 height: 38px;
                 width: 38px;
                 right: -22px;
+            }
+            @include ipadPro {
+                height: 54px;
+                width: 54px;
+                right: -30px;
             }
         }
 
@@ -740,6 +764,9 @@
         }
         @include laptopS {
             border: 3px solid $color-red;
+        }
+        @include ipadPro {
+            border: 6px solid $color-red;
         }
     }
 
@@ -778,7 +805,7 @@
         img {
             width: 90%;
             height: 90%;
-            @include ipadPro{
+            @include ipadPro {
                 width: 86%;
                 height: 86%;
             }
@@ -892,6 +919,11 @@
             height: 118px;
             border: 7px solid #aa6615;
         }
+        @include tablet {
+            width: 137px;
+            height: 137px;
+            border: 9px solid #aa6615;
+        }
     }
     &__generalText {
         width: 120px;
@@ -916,6 +948,11 @@
             width: 117px;
             padding: 5px 0;
             margin-top: 7px;
+        }
+        @include tablet {
+            width: 137px;
+            padding: 7px 0;
+            margin-top: 9px;
         }
     }
     &__goldBar {
@@ -1299,7 +1336,6 @@
         letter-spacing: 0.125rem;
     }
 }
-
 
 @keyframes an__profile__item-notAfford {
     100% {
