--- a/sass/elements/game/_profile.scss
+++ b/sass/elements/game/_profile.scss
@@ -883,6 +883,9 @@
         flex-direction: column;
         align-items: center;
         width: 151px;
+        @include tablet {
+            margin-top: 10px;
+        }
     }
 
     &__generalImg {
@@ -953,6 +956,7 @@
             width: 137px;
             padding: 7px 0;
             margin-top: 9px;
+            margin-bottom: 10px;
         }
     }
     &__goldBar {
@@ -1117,6 +1121,9 @@
     @include laptopS {
         padding: 11px 0;
     }
+    @include tablet {
+        padding: 4px 0;
+    }
 }
 .profile__generalLabelWrapper {
     position: absolute;
@@ -1137,6 +1144,9 @@
     color: $color-red;
     font-weight: 700;
     letter-spacing: 0.063rem;
+    @include tablet {
+        padding: 8px 0;
+    }
 }
 .profile__item--nameBlue {
     color: $color-blue !important;
@@ -1180,6 +1190,11 @@
         @include ipadPro {
             font-size: 22px;
             padding: 3px 10px;
+            border-radius: 8px;
+        }
+        @include tablet {
+            font-size: 26px;
+            padding: 3px 11px;
             border-radius: 8px;
         }
     }
