--- a/sass/elements/game/_general.scss
+++ b/sass/elements/game/_general.scss
@@ -5,15 +5,15 @@
     max-height: 1080px;
     display: flex;
     margin: 0 auto;
-    @include desktopM{
+    @include desktopM {
         width: 1600px;
         min-height: 720px;
         max-height: 900px;
     }
-    @include desktopS{
+    @include desktopS {
         width: 1440px;
     }
-    @include laptopL{
+    @include laptopL {
         width: 1336px;
         min-height: 600px;
         max-height: 768px;
@@ -39,7 +39,7 @@
         min-height: 1024px;
     }
 }
-.game__contentContainer{
+.game__contentContainer {
     width: 80%;
     height: 100%;
     position: relative;
@@ -57,27 +57,25 @@
         height: calc(100% - 68px);
     }
 }
-.game__errorWrapper{
+.game__errorWrapper {
     position: absolute;
     z-index: 12;
 
     left: 2%;
     width: 96%;
-    transform: translateY(-140%);    
+    transform: translateY(-140%);
     padding: 0.375rem 0;
     text-align: center;
     background-color: $color-error;
     animation: 1s an__game_errorWrapper_show ease-in-out forwards,
-     0.5s 3s  an__game_errorWrapper_show2 ease-in-out forwards
-    ;
-    
-    
+        0.5s 3s an__game_errorWrapper_show2 ease-in-out forwards;
+
     text-transform: uppercase;
     color: $color-white;
     letter-spacing: 0.125rem;
     font-size: 2.375rem;
 }
-.game__section{
+.game__section {
     background-color: rgba(255, 255, 255, 0.3);
     background-size: 100% 100%;
     height: 100%;
@@ -95,7 +93,7 @@
         left: 0;
     }
 }
-.countdown{
+.countdown {
     &__wrapper {
         display: flex;
         justify-content: center;
@@ -109,7 +107,7 @@
         backdrop-filter: blur(2px);
         position: relative;
         overflow: hidden;
-        @include desktopS{
+        @include desktopS {
             height: 51px;
             border: 6px solid $color-gold;
         }
@@ -120,36 +118,36 @@
         @include ipadPro {
             width: 93%;
             height: 63px;
-            border: 7px solid  $color-gold;
+            border: 7px solid $color-gold;
         }
     }
-    &__progressBar{
-      position: absolute;
-      height: 100%;
-      width: 0%;
-      left: 0;
-      background: $color-green;
-      animation: 15s an_guardCountdownBar infinite ease-in-out;
-      background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
-      background-size: 400% 400%;
+    &__progressBar {
+        position: absolute;
+        height: 100%;
+        width: 0%;
+        left: 0;
+        background: $color-green;
+        animation: 15s an_guardCountdownBar infinite ease-in-out;
+        background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+        background-size: 400% 400%;
     }
-    &__time{
+    &__time {
         z-index: 1;
         font-weight: 900;
-       word-spacing: 0.125rem;
+        word-spacing: 0.125rem;
         color: $color-white;
-       font-size: 48px;
-       @include desktopS{
-           font-size: 34px;
-       }
-       @include laptopM {
-           font-size: 28px;
-       }
-       @include ipadPro {
-           font-size: 41px;
-       }
+        font-size: 48px;
+        @include desktopS {
+            font-size: 34px;
+        }
+        @include laptopM {
+            font-size: 28px;
+        }
+        @include ipadPro {
+            font-size: 41px;
+        }
     }
-    &__cancelBtn{
+    &__cancelBtn {
         display: block;
         margin: 10px auto;
         width: auto;
@@ -162,7 +160,7 @@
         font-weight: 700;
         border-radius: 8px;
         letter-spacing: 0.063rem;
-        &:hover{
+        &:hover {
             cursor: pointer;
             background: $color-error;
             color: $color-white;
@@ -179,21 +177,34 @@
         @include laptopS {
             border-radius: 5px;
         }
-
     }
 }
-@keyframes an__game_errorWrapper_show{
-    100%{
-        transform: translateY(0%);  
+.closeIcon {
+    position: absolute;
+    width: 47px;
+    height: 47px;
+    z-index: 2;
+
+    &__searchFriend {
+        top: 7px;
+        right: 7px;
+    }
+    img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
     }
 }
-@keyframes an__game_errorWrapper_show2{
-    0%{
-        transform: translateY(10%);  
-    }
-    100%{
-        transform: translateY(-140%);    
+@keyframes an__game_errorWrapper_show {
+    100% {
+        transform: translateY(0%);
     }
 }
-
-
+@keyframes an__game_errorWrapper_show2 {
+    0% {
+        transform: translateY(10%);
+    }
+    100% {
+        transform: translateY(-140%);
+    }
+}
