--- a/sass/elements/game/_searchFriends.scss
+++ b/sass/elements/game/_searchFriends.scss
@@ -3,6 +3,10 @@
     height: 100%;
     background-image: url("/images/background_search_friend.jpg");
     background-size: 100% 100%;
+    position: relative;
+    @include tablet {
+        background-size: 154% 100%;
+    }
     &__item {
         width: 50%;
         height: 100%;
@@ -14,12 +18,15 @@
         }
         &-search {
             background: rgba(255, 255, 255, 0.5);
-            border-right: 6px solid #343a40;
+            border-right: 6px solid  $color-gray_dark;
             @include desktopS {
-                border-right: 4px solid #343a40;
+                border-right: 4px solid  $color-gray_dark;
             }
             @include ipadPro {
-                border-right: 10px solid #343a40;
+                border-right: 10px solid $color-gray_dark;
+            }
+            @include tablet {
+                border-right:none;
             }
         }
         &-result {
@@ -116,6 +123,9 @@
         }
         img {
             margin-left: -2px;
+            @include tablet {
+                margin-left: -3px;
+            }
         }
         strong {
             margin-left: 0.25rem;
@@ -124,6 +134,9 @@
             letter-spacing: 0.063rem;
             @include ipadPro {
                 font-size: 1.1rem;
+            }
+            @include tablet {
+                font-size: 1.6rem;
             }
         }
         @include laptopL {
@@ -136,6 +149,10 @@
         @include ipadPro {
             height: 34px;
             width: 91%;
+        }
+        @include tablet {
+            height: 42px;
+            border-radius: 19px;
         }
     }
     &__nick {
@@ -167,7 +184,9 @@
             }
             @include ipadPro {
                 margin-left: 12px;
-                // font-size: 1.1rem;
+            }
+            @include tablet {
+                font-size: 1.6rem;
             }
         }
         &::after {
@@ -206,6 +225,11 @@
             height: 34px;
             margin-left: 17px;
             width: 89%;
+        }
+        @include tablet {
+            @include tablet {
+                height: 42px;
+            }
         }
     }
     &__level {
@@ -284,6 +308,10 @@
         @include ipadPro {
             font-size: 15px;
         }
+        @include tablet {
+            height: 42px;
+            font-size: 22px;
+        }
     }
 }
 .searchFriend__list {
@@ -325,6 +353,12 @@
                 width: 26%;
             }
         }
+        td{
+            @include tablet{
+              padding-bottom: 7px;  
+            }
+            
+        }
     }
     thead {
         border-bottom: 6px solid $color-blue;
@@ -340,9 +374,14 @@
                 border-right: none;
             }
             @include ipadPro {
-                padding-top: 9px;
-                padding-bottom: 9px;
+                padding: 9px 0;
             }
+            @include tablet {
+                font-size: 1.863rem;
+                padding: 3px 0;
+               
+            }
+            
         }
         @include desktopS {
             border-bottom: 4px solid $color-blue;
@@ -387,7 +426,7 @@
         height: calc(100% - 38px);
     }
     @include ipadPro {
-        height: calc(100% - 55px);
+        height: calc(100% - 51px);
         width: 101%;
     }
 }
