--- a/sass/elements/game/_general.scss
+++ b/sass/elements/game/_general.scss
@@ -187,7 +187,7 @@
 
     &__searchFriend {
         top: 7px;
-        right: 7px;
+        right: calc(50% - 23px);
     }
     img {
         width: 100%;
