--- a/sass/elements/game/_general.scss
+++ b/sass/elements/game/_general.scss
@@ -189,6 +189,10 @@
         top: 7px;
         right: calc(50% - 23px);
     }
+    &__chat{
+        top: 2px;
+        right: 2px;
+    }
     img {
         width: 100%;
         height: 100%;
